Create personal website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css"/>
-    </head>
+    </head>   
     <body>
-        <img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg">
-        <h1>Cam Larson</h1>
-        <p>Coding</p>
-        <p>Coding is Fun</p>
+      <img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg">
+      <h1>Cam Larson</h1>
+      <p>All Things Random</p>
     </body>
 </html>
