--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="styles.css"/>
     </head>   
     <body>
       <img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg">
