Create personal website

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg">
       <h1>Cam Larson</h1>
       <p>All Things Random</p>
+      <img class="two" src="https://media.giphy.com/media/l3zoKeX8bMG5sMP4s/giphy.gif">
     </body>
 </html>
