Create personal website

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
       <img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg">
       <h1>Cam Larson</h1>
       <p>All Things Random</p>
-      <p>Gifs</p>
+      <h1>Gifs</h1>
       <img class="two" src="https://media.giphy.com/media/l3zoKeX8bMG5sMP4s/giphy.gif">
       <img class="three" src="http://media3.giphy.com/media/sIIhZliB2McAo/giphy.gif">
       <img class="four" src="http://media3.giphy.com/media/kEKcOWl8RMLde/giphy.gif">
+      <img class="five" src="https://media.giphy.com/media/3oriNS5VULj8Ndn0TS/giphy.gif">
     </body>
 </html>
