Find BigFoot workshop

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <h1>Cam Larson</h1>
       <p>All Things Random</p>
       <h1>Gifs</h1>
+      <p>(I do NOT own any of these, they were all found online)</p>
       <img class="two" src="https://media.giphy.com/media/l3zoKeX8bMG5sMP4s/giphy.gif">
       <img class="three" src="http://media3.giphy.com/media/sIIhZliB2McAo/giphy.gif">
       <img class="four" src="http://media3.giphy.com/media/kEKcOWl8RMLde/giphy.gif">
