--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       <img class="three" src="http://media3.giphy.com/media/sIIhZliB2McAo/giphy.gif">
       <img class="four" src="http://media3.giphy.com/media/kEKcOWl8RMLde/giphy.gif">
       <img class="five" src="https://media.giphy.com/media/3oriNS5VULj8Ndn0TS/giphy.gif">
+      <h2>Game</h2>
+      <camlarson1.github.io/find_bigfoot/>
     </body>
 </html>
