--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <img class="four" src="http://media3.giphy.com/media/kEKcOWl8RMLde/giphy.gif">
       <img class="five" src="https://media.giphy.com/media/3oriNS5VULj8Ndn0TS/giphy.gif">
       <h2>Game</h2>
-      <camlarson1.github.io/find_bigfoot/>
+      <p>Go to: camlarson1.github.io/find_bigfoot</p>
     </body>
 </html>
