--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <img class="three" src="http://media3.giphy.com/media/sIIhZliB2McAo/giphy.gif">
       <img class="four" src="http://media3.giphy.com/media/kEKcOWl8RMLde/giphy.gif">
       <img class="five" src="https://media.giphy.com/media/3oriNS5VULj8Ndn0TS/giphy.gif">
+      <img class="six" src="http://78.media.tumblr.com/8076cbe49d31caf6c0a856bab22d9ea2/tumblr_nwdnwl2uiX1rx5rfmo1_540.gif">
+      <img class="seven" src="https://media.giphy.com/media/iNidCejQSaRws/giphy.gif">
+      
       <h2>Game</h2>
       <p>Go to: camLarson1.github.io/find_bigfoot</p>
     </body>
